# RoboUtil

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.gradle  compile_commands.json  log.csv  log2.csv  log2.xlsx  project.pros  settings.gradle
RoboUtil/: build.gradle
RoboUtil/src/: AdaptivePurePursuitController.cpp  AdaptivePurePursuitController.h  CORELog.cpp  CORELog.h  CORETimer.cpp  CORETimer.h  Math.h  PathFollower.cpp  PathLoader.cpp  PathSegment.cpp  TankOdometry.cpp  TankOdometry.h  Waypoint.h  greeter.cpp
RoboUtil/src/Math/: Angle.cpp  Angle.h  Point.cpp  Point.h  Point_OLD.cpp  Point_OLD.h  Pose.cpp  Pose.h  Position.cpp  Position.h  Vector.cpp  Vector.h
RoboUtil/test/: AngleTest.cpp  MainTest.cpp  TankOdometryTest.cpp  VectorTest.cpp
include/: Path.h  PathSegment.h  Waypoint.h
include/Math/: Math.h
src/: AdaptivePurePursuitController.cpp  AdaptivePursuit.cpp  Path.cpp  PathFollower.cpp  PathLoader.cpp  PathManager.cpp  PathSegment.cpp  TankOdometry.cpp  Trans2d.cpp  Waypoint.cpp
src/Math/: Pose.cpp
src/main/cpp/: CORELog.cpp  InterpolatingMap.cpp  OmniDirectionalPursuit.cpp  Path.cpp  PathLoader.cpp  PathSegment.cpp  Position2d.cpp  PursuitController.cpp  Rotation2d.cpp  TankKinematics.cpp  Translation2d.cpp  Vector.cpp
src/main/headers/: InterpolatingMap.h  Math.h  OmniDirectionalPursuit.h  Path.h  PathLoader.h  PathSegment.h  Position2d.h  Rotation2d.h  TankKinematics.h  Vector.h  (+2 more)
test/: AdaptivePurePursuitControllerTest.cpp  MainTest.cpp  PathSegmentTest.cpp  PathTest.cpp  TankOdometryTest.cpp
test/testPaths/: simplePath.json
(+1 files in other folders)
